# move-local-debuger

./: .gitignore  Cargo.toml
src/: main.rs
src/modules/: a.mvir
src/scripts/: add_validator.mvir  remove_validator.mvir  test.mvir  test.mvsm
