[package]
name = "move-local-debuger"
version = "0.1.0"
authors = ["梁平 <18786721@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde_json = "1.0.48"
libra-config = { git = "https://github.com/libra/libra.git", branch = "testnet" }
stdlib = { git="https://github.com/libra/libra", version = "0.1.0" }
vm = {git="https://github.com/libra/libra", package="vm", version="0.1.0"}
move-vm-runtime = {git="https://github.com/libra/libra", version="0.1.0" }
move-vm-state = {git="https://github.com/libra/libra", version="0.1.0" }
language-e2e-tests = { git="https://github.com/libra/libra", version = "0.1.0" }
bytecode-verifier = { git = "https://github.com/libra/libra", version = "0.1.0" }
datatest-stable = { git = "https://github.com/libra/libra", version = "0.1.0" }
functional-tests = { git = "https://github.com/libra/libra", version = "0.1.0" }
ir-to-bytecode = { git = "https://github.com/libra/libra", version = "0.1.0" }
libra-types = { git = "https://github.com/libra/libra", version = "0.1.0" }
move-ir-types = { git = "https://github.com/libra/libra", version = "0.1.0" }
compiler = { git = "https://github.com/libra/libra", version = "0.1.0" }
move-vm-types= { git = "https://github.com/libra/libra", version = "0.1.0" }